package com.oraclejavabot.features.kpis.dto;

public record DashboardDeveloperOptionDTO(
        String id,
        String name,
        String email
) {
}