package com.oraclejavabot.features.kpis.dto;

public record DashboardSprintOptionDTO(
        String id,
        String name,
        String startDate,
        String endDate
) {
}