@startuml

class DashboardDeveloperOptionDTO {
	{field} -email : String
	{field} -id : String
	{field} -name : String
	{method} +email () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +id () : String
	{method} +name () : String
	{method} +toString () : String
}


class DashboardSprintHistoryPointDTO {
	{field} -completedTasks : int
	{field} -delayedTasks : int
	{field} -onTimeTasks : int
	{field} -sprintId : String
	{field} -sprintName : String
	{field} -totalEstimatedHours : double
	{field} -totalRealHours : double
	{field} -totalTasks : int
	{method} +completedTasks () : int
	{method} +delayedTasks () : int
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +onTimeTasks () : int
	{method} +sprintId () : String
	{method} +sprintName () : String
	{method} +toString () : String
	{method} +totalEstimatedHours () : double
	{method} +totalRealHours () : double
	{method} +totalTasks () : int
}


class DashboardSprintOptionDTO {
	{field} -endDate : String
	{field} -id : String
	{field} -name : String
	{field} -startDate : String
	{method} +endDate () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +id () : String
	{method} +name () : String
	{method} +startDate () : String
	{method} +toString () : String
}


class DashboardSummaryDTO {
	{field} -avgHoursPerDeveloper : double
	{field} -avgTasksPerDeveloper : double
	{field} -completedTasks : int
	{field} -completionRate : double
	{field} -delayedTasks : int
	{field} -estimationAccuracy : double
	{field} -onTimeRate : double
	{field} -onTimeTasks : int
	{field} -totalEstimatedHours : double
	{field} -totalRealHours : double
	{field} -totalTasks : int
	{method} +avgHoursPerDeveloper () : double
	{method} +avgTasksPerDeveloper () : double
	{method} +completedTasks () : int
	{method} +completionRate () : double
	{method} +delayedTasks () : int
	{method} +equals ( o : Object ) : boolean
	{method} +estimationAccuracy () : double
	{method} +hashCode () : int
	{method} +onTimeRate () : double
	{method} +onTimeTasks () : int
	{method} +toString () : String
	{method} +totalEstimatedHours () : double
	{method} +totalRealHours () : double
	{method} +totalTasks () : int
}


class DeveloperGlobalPerformanceDTO {
	{field} +asignadas : int
	{field} +completadas : int
	{field} +porcentajeCompletadas : double
}


class DeveloperPerformanceController {
	{method} +getDeveloperPerformance ( projectId : String ) : List
}


interface DeveloperPerformanceRepository {
	{method}  {abstract} +getGlobalPerformance ( projectId : String ) : List
	{method}  {abstract} +getSprintPerformance ( projectId : String ) : List
}


class DeveloperPerformanceResponseDTO {
	{field} +nombre : String
	{field} +userId : String
}


class DeveloperPerformanceService {
	{method} +getDeveloperPerformance ( projectId : String ) : List
}


class DeveloperSprintPerformanceDTO {
	{field} +horasReales : double
	{field} +sprintId : String
	{field} +sprintNombre : String
	{field} +tareasTerminadas : int
}


class ProjectDashboardGraphQLResolver {
	{method} +dashboardDeveloperOptions ( projectId : String ) : List
	{method} +dashboardSprintOptions ( projectId : String ) : List
	{method} +projectDashboardKpis ( projectId : String , sprintId : String , developerId : String ) : ProjectDashboardKpiDTO
}


class ProjectDashboardKpiDTO {
	{field} -developerId : String
	{field} -developerName : String
	{field} -projectId : String
	{field} -scopeLabel : String
	{field} -sprintId : String
	{field} -sprintName : String
	{method} +developerId () : String
	{method} +developerName () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +projectId () : String
	{method} +scopeLabel () : String
	{method} +sprintHistory () : List
	{method} +sprintId () : String
	{method} +sprintName () : String
	{method} +summary () : DashboardSummaryDTO
	{method} +toString () : String
}


class ProjectDashboardKpiRepository {
	{field} -jdbcTemplate : JdbcTemplate
	{method} +calculateSummary ( projectId : String , sprintId : String , developerId : String , developerCount : int ) : DashboardSummaryDTO
	{method} +countActiveDevelopersInProjectTeam ( projectId : String ) : int
	{method} +findDeveloperName ( developerId : String ) : String
	{method} +findDeveloperOptions ( projectId : String ) : List
	{method} -findDeveloperSprintHistory ( projectId : String , developerId : String ) : List
	{method} +findSprintHistory ( projectId : String , developerId : String ) : List
	{method} +findSprintName ( sprintId : String ) : String
	{method} +findSprintOptions ( projectId : String ) : List
	{method} -findTeamSprintHistory ( projectId : String ) : List
	{method} -getDouble ( rs : ResultSet , columnName : String ) : double
	{method} -getInt ( rs : ResultSet , columnName : String ) : int
	{method} -mapDeveloperOption ( rs : ResultSet , rowNum : int ) : DashboardDeveloperOptionDTO
	{method} -mapSprintHistoryPoint ( rs : ResultSet , rowNum : int ) : DashboardSprintHistoryPointDTO
	{method} -mapSprintOption ( rs : ResultSet , rowNum : int ) : DashboardSprintOptionDTO
	{method} -mapSummary ( rs : ResultSet , developerCount : int ) : DashboardSummaryDTO
	{method} -percentage ( numerator : int , denominator : int ) : double
	{method} -round ( value : double , decimals : int ) : double
	{method} -toOracleRawHex ( id : String ) : String
}


class ProjectDashboardKpiService {
	{method} -buildScopeLabel ( sprintName : String , developerName : String ) : String
	{method} +getDeveloperOptions ( projectId : String ) : List
	{method} +getProjectDashboardKpis ( projectId : String , sprintId : String , developerId : String ) : ProjectDashboardKpiDTO
	{method} +getSprintOptions ( projectId : String ) : List
	{method} -normalizeOptionalId ( value : String ) : String
}


class SprintKpiController {
	{method} +getSprintKpis ( sprintId : String ) : SprintKpiResponseDTO
}


interface SprintKpiRepository {
	{method}  {abstract} +getSprintKpis ( sprintId : String ) : List
}


class SprintKpiResponseDTO {
	{field} -aTiempo : Integer
	{field} -conRetraso : Integer
	{field} -tareasCompletadas : Integer
	{field} -totalEstimadoHrs : Double
	{field} -totalRealHrs : Double
	{field} -totalTareas : Integer
}


class SprintKpiService {
	{method} +getSprintKpis ( sprintId : String ) : SprintKpiResponseDTO
	{method} -toDouble ( value : Object ) : double
	{method} -toInt ( value : Object ) : int
}




DeveloperPerformanceController *--  DeveloperPerformanceService : service
DeveloperPerformanceResponseDTO "1" o-- "0..*"  DeveloperSprintPerformanceDTO : historicoSprints
DeveloperPerformanceResponseDTO -->  DeveloperGlobalPerformanceDTO : rendimientoGlobal
DeveloperPerformanceService *--  DeveloperPerformanceRepository : repository
ProjectDashboardGraphQLResolver *--  ProjectDashboardKpiService : service
ProjectDashboardKpiDTO "1" o-- "0..*"  DashboardSprintHistoryPointDTO : sprintHistory
ProjectDashboardKpiDTO *--  DashboardSummaryDTO : summary
ProjectDashboardKpiService *--  ProjectDashboardKpiRepository : repository
SprintKpiController *--  SprintKpiService : service
SprintKpiService *--  SprintKpiRepository : repository


@enduml